--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-resemble",
+  "name": "node-resemble-tolerance",
   "version": "1.1.3",
   "description": "Image analysis and comparison with HTML5",
   "main": "index.js",
